Checkeando funcionamiento GitHub desktop

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Práctica de Bootstrap</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <h1>Hola Bootstrap</h1>
+        <div class="container-fluid">
+            <p class="text-center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea excepturi
+            tenetur, quam in sapiente explicabo dicta, dignissimos ipsum asperiores
+            perspiciatis praesentium sed totam, consequatur nostrum aut cumque! Minima
+            aliquid aliquam dolore blanditiis autem architecto, omnis voluptatibus
+            quaerat commodi quidem eligendi corrupti nobis, voluptate voluptates
+            laborum esse sint aspernatur natus eos. Ut obcaecati itaque, blanditiis
+            consectetur suscipit fuga minima ipsa labore, voluptatibus eum dolor quam
+            corporis harum animi quia laudantium? Temporibus eos magnam illo ducimus
+            quos ad asperiores blanditiis fuga, ea harum consequuntur! Minus laborum
+            praesentium illo enim in! Minima tempora aspernatur dolorem qui harum
+            impedit aliquid perferendis nam autem nihil excepturi blanditiis deleniti
+            ratione ad, repudiandae, aperiam iusto! Fugiat doloribus eum impedit magni
+            laboriosam accusantium, quam voluptas atque rerum in ea veniam voluptates
+            adipisci aliquid dolore id fuga, quaerat odit nemo quo! Quia illo
+            consequuntur eos dicta, accusamus quam molestias ad est incidunt ipsa
+            deserunt, et inventore animi ducimus at?
+            </p>
+        </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
